# openapi/nhms.v1.yaml
@@ -2663,6 +2663,8 @@ components:
         - required_station_variables
         - station_variable_coverage
         - candidate_limit
+        - search_limit
+        - context_limit
         - query_indexes
       properties:
         station_sample_count:
@@ -2681,6 +2683,12 @@ components:
           items:
             $ref: "#/components/schemas/QhhLatestStationVariableCoverage"
         candidate_limit:
+          type: integer
+          minimum: 1
+        search_limit:
+          type: integer
+          minimum: 1
+        context_limit:
           type: integer
           minimum: 1
         query_indexes:
